Update CalculoDatos.java
corrección de errores en el uso de threads